Renaming `event.addListener` to `event.on` Renaming `event.removeListener` to `event.remove`

--- a/background.html
+++ b/background.html
@@ -335,11 +335,11 @@
             Platform.icon.setPopup({ popup: "window.html" });
         }
 
-//        Options.event.addListener("change", function (event) {
+//        Options.event.on("change", function (event) {
 //            console.log(event);
 //        });
 
-        Options.event.addListener("change", function (event) {
+        Options.event.on("change", function (event) {
             switch (event.name) {
             case "counter.reset.time.hour": //* FALLTHRU
             case "counter.reset.time.minute":
