--- a/window.html
+++ b/window.html
@@ -11,14 +11,12 @@
     <link rel="stylesheet" type="text/css" href="/lib/Options.css" />
     <link rel="stylesheet" type="text/css" href="/lib/UI%20Helper.css" />
     <link rel="stylesheet" type="text/css" href="/window.css" />
-    <!--<link rel="stylesheet" type="text/css" href="/views/horizontal.css" />-->
 </head>
 <body>
     <script src="/lib/Undo.js"></script>
     <script src="/lib/Array.js"></script>
     <script src="/lib/Global%20Helper.js"></script>
     <script src="/lib/UI%20Helper.js"></script>
-    <!--<script src="/lib/Parser.js"></script>-->
     <script src="/lib/Event%20Helper.js"></script>
     <script src="/lib/parser.js"></script>
     <script src="/lib/action.search.js"></script>
@@ -30,13 +28,7 @@
     <!--**
         *  This is to make it easier to take screenshots when the UI changes.
         *-->
-    <!--<script src="http://documentation.tab-organizer.googlecode.com/hg/screenshot.js"></script>-->
+    <!--!<script src="http://documentation.tab-organizer.googlecode.com/hg/screenshot.js"></script>-->
     <script src="/window.js"></script>
-
-    <!--<script>
-/*        chrome.bookmarks.search("google chrome", function (array) {
-            console.log(array.length);
-        });*/
-    </script>-->
 </body>
 </html>
